--- a/WingtipToys/WingtipToys/Web.config
+++ b/WingtipToys/WingtipToys/Web.config
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WingtipToys-20190519121942.mdf;Initial Catalog=aspnet-WingtipToys-20190519121942;Integrated Security=True" providerName="System.Data.SqlClient"/>
-    <add name="WingtipToys" connectionString="Data Source=(localdb)\mssqllocaldb;AttachDbFilename=|DataDirectory|\wingtiptoys.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="WingtipToys" connectionString="Data Source=SQL;Initial Catalog=WingtipToys;Persist Security Info=True;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
