--- a/WingtipToys/WingtipToys/Web.config
+++ b/WingtipToys/WingtipToys/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
@@ -21,7 +21,7 @@
   -->
   <system.web>
     <authentication mode="None"/>
-    <compilation debug="true" targetFramework="4.6"/>
+    <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.6"/>
     <pages>
       <namespaces>
